// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<button
  className="sc-AxjAm fFgggO"
>
  foo
</button>
`;

exports[`renders as a secondary button 1`] = `
<button
  className="sc-AxjAm dLWtmN"
>
  foo
</button>
`;
